# TheML

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-no-gpu.txt  requirements.txt  tml.yaml
control/templates/: project.gitignore
profiles/autogluon/: ag-best-boost-gpu-1h-v1.yaml  ag-best-xgb-cpu-1h-v1.yaml  ag-fast-boost-v1.yaml  ag-full-boost-gpu-ens-v1.yaml  ag-full-boost-v1.yaml  ag-medium-10m-v1.yaml  ag-s6e6-boost-ens-v1.yaml  ag-s6e6-boost-gpu-best-ens-stack-1h-v1.yaml  ag-s6e6-boost-gpu-best-ens-stack-2h-v1.yaml  ag-s6e6-boost-gpu-best-ens-stack-ds0-30m-v1.yaml  ag-s6e6-boost-gpu-cat-cv5-8m-v1.yaml  ag-s6e6-boost-gpu-cat-holdout-5m-v1.yaml  ag-s6e6-boost-gpu-cat-holdout-ranker-5m-v1.yaml  ag-s6e6-boost-gpu-cat-prune-holdout-8m-v1.yaml  ag-s6e6-boost-gpu-ens-v1.yaml  ag-s6e6-boost-gpu-xgb-cat-cv3-8m-v1.yaml  ag-s6e6-boost-gpu-xgb-cv3-10m-v1.yaml  ag-s6e6-boost-gpu-xgb-cv3-8m-v1.yaml  ag-s6e6-boost-v1.yaml  ag-xgb-medium-gpu-balanced-10m-v1.yaml
profiles/branch/: decision-score.yaml  default.yaml
prompts/blocks/: data-overview.md.j2  existing-root-hypotheses.md.j2  group-code-contract.md.j2  materialization-context.md.j2  output-contract.md.j2  task-context.md.j2
prompts/branch/: add-existing-root-group.md.j2  modify-existing-group.md.j2
prompts/project/: metadata.md.j2
prompts/review/: execution-review.md.j2
prompts/root/: bugfix.md.j2  hypothesis.md.j2  materialize-autogluon.md.j2  materialize-legacy.md.j2  revise-hypothesis.md.j2
tests/: test_branch_epsilon.py  test_cli_workflow.py  test_core_contracts.py  test_root_revisions.py
(+3876 files in other folders)
