[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "theml"
version = "0.1.0"
description = "Filesystem-first ML hypothesis runner."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "autogluon>=1.5,<1.6",
  "jinja2>=3.1",
  "pydantic>=2",
  "PyYAML>=6",
  "rich>=13",
  "typer>=0.16",
]

[project.scripts]
tml = "tml.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
