[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "theml"
version = "0.1.0"
description = "Filesystem-first ML hypothesis runner."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "jinja2>=3.1",
  "pydantic>=2",
  "PyYAML>=6",
  "rich==13.7.0",
  "typer==0.24.2",
]

[project.optional-dependencies]
autogluon = ["autogluon.tabular>=1.5,<1.6"]

[project.scripts]
tml = "tml.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/tml"]
